# f103-adc

./: .gitignore  Cargo.toml  openocd.cfg
.cargo/: config  config.toml
src/: ad770x.rs  main.rs  max30100.rs
