[package]
name = "stm103"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { features = ["unproven"], version = "0.2.7" }
embedded-sdmmc = { path = "embedded-sdmmc-rs", default-features = false, features = ["defmt-log"] }
cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.3"
nb = "1"
defmt = "0.3.4"
defmt-rtt = "0.4.0"
panic-abort = "0.3.2"

[patch.crates-io]
defmt = { git = "https://github.com/knurling-rs/defmt" }

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["stm32f103", "rt"]

[profile.release]
lto = true

[profile.dev]
lto = true

[workspace]
members = [
    "embedded-sdmmc-rs"
]